# dukzcry.github.io

./: .gitignore  CNAME  archive.html  atom.xml  cabal.project  index.html  robots.txt  rss.xml  site.cabal  site.hs  sitemap.xml  style.css
2/: index.html
css/: default.css  emoji.css
gallery/: index.html
gallery/berlin/: IMG_20191109_204239.jpg.html  IMG_20191110_123635.jpg.html  IMG_20191110_164656.jpg.html  IMG_20191110_172042.jpg.html  IMG_20191110_174337.jpg.html  IMG_20191110_182909.jpg.html  IMG_20191111_133949.jpg.html  IMG_20191111_135527.jpg.html  IMG_20191111_143048.jpg.html  IMG_20191111_154446.jpg.html  (+12 more)
pages/: about.html  about.md  software.html  software.md
posts/: 2007.html  2007.md  berlin.html  berlin.md  books.html  books.md  croatia.html  croatia.md  england.html  england.md  germany.html  germany.md  greece.html  greece.md  karelia.html  karelia.md  latvia.html  latvia.md  migration.html  migration.md  mod.html  mod.md  only.html  only.md  rat.html  rat.md  retropc.html  retropc.md  server.html  server.md  test.html  test.md  tomato.html  tomato.md  travel.html  travel.md
tags/: bumblebee.html  demoscene.html  evdev.html  lastfm.html  libnotify.html  linux.html  mod.html  nixos.html  nvidia-xrun.html  optimus.html  pm.html  slot1.html  tracker.html  tray.html  wm.html  блог.html  книги.html  крысятничество.html  путешествия.html  ретрокомпьютер.html  сайт.html  сервер.html  спам.html
templates/: archive-list.html  comment-bare.html  comment.html  default.html  gallery.html  post-list.html  post.html  robots.txt  sitemap.xml
(+67 files in other folders)
